--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 output/
 __*
 .DS_Store
+NAO APAGAR_output/
 
 # C extensions
 *.so
@@ -30,6 +31,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -211,3 +213,5 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 .DS_Store
+material_estudo_consolidated.md
+material_estudo.md
