feat: Update documentation and improve file handling in the study material generation scripts

--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,7 @@ __marimo__/
 .DS_Store
 material_estudo_consolidated.md
 material_estudo.md
+generate_study_material copy 2.py
+generate_study_material copy 3.py
+generate_study_material copy.py
+generate_study_material_gpt5.py
